# StudyPlanner

./: .gitignore  AddEvent.cpp  AddEvent.h  CMakeLists.txt  Calendar.cpp  Calendar.h  CalendarFile.cpp  CalendarFile.h  Event.cpp  Event.h  EventWrapper.cpp  MenuItem.cpp  MenuItem.h  README.md  SECURITY.md  StudySession.cpp  StudySession.h  Utilities.cpp  Utilities.h  addNewEvent.cpp  addNewEvent.h  addPaper.cpp  addPaper.h  assignment.cpp  assignment.h  calendar.txt  class.cpp  eventSkeleton.cpp  eventSkeleton.h  exam.cpp  exam.h  flashcard.cpp  flashcard.h  flashcardM.cpp  flashcardM.h  input.txt  input1.txt  input3 copy.txt  input3.txt  input4.txt  (+18 more)
.github/workflows/: cmake-multi-platform.yml
persistence/: CalendarFile.cpp  CalendarFile.h
